src/objects/Entitlement__c/Entitlement__c.object-meta.xml
<CustomObject>
    <label>Entitlement</label>
    <nameField>
        <displayFormat>EN-{0}</displayFormat>
        <label>Entitlement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>