src/objects/Entitlement__c/fields/Case_Creation__c.field-meta.xml
<CustomField>
    <fullName>Case_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Creation</label>
    <type>Checkbox</type>
</CustomField>