src/objects/Entitlement__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Contract Number</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>