src/objects/Entitlement__c/fields/Contract_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Formula__c</fullName>
    <formula>Contract_Number__r.ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number Formula</label>
    <type>Text</type>
</CustomField>