src/objects/Entitlement__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Course or Product this entitlement is associated with</description>
    <inlineHelpText>Course or Product this entitlement is associated with</inlineHelpText>
    <label>Course/Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>