src/objects/Entitlement__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Entitlement End Date</label>
    <type>Date</type>
</CustomField>