src/objects/Entitlement__c/fields/Entitlement_Name__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Name__c</fullName>
    <label>Entitlement Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>