src/objects/Entitlement__c/fields/Entitlement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Start_Date__c</fullName>
    <label>Entitlement Start Date</label>
    <type>Date</type>
</CustomField>