src/objects/Entitlement__c/fields/Entitlement_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Sub_Type__c</fullName>
    <label>Entitlement Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APU Selection</fullName>
            </value>
            <value>
                <fullName>LPO</fullName>
            </value>
            <value>
                <fullName>MCBL</fullName>
            </value>
            <value>
                <fullName>NCFR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>R&amp;O</fullName>
            </value>
            <value>
                <fullName>Reliability Remedy</fullName>
            </value>
            <value>
                <fullName>Repair Volume Discount</fullName>
            </value>
            <value>
                <fullName>Sales Incentive</fullName>
            </value>
            <value>
                <fullName>Supply Agreement</fullName>
            </value>
            <value>
                <fullName>TAT Remedy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>