src/objects/Entitlement__c/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <label>Entitlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accrual - Reserve</fullName>
            </value>
            <value>
                <fullName>AFGS XM Subscription</fullName>
            </value>
            <value>
                <fullName>AFIS Datalink WX Graphics Annual</fullName>
            </value>
            <value>
                <fullName>Aircraft</fullName>
            </value>
            <value>
                <fullName>Aircraft Equipment</fullName>
            </value>
            <value>
                <fullName>Aircraft - Renewal</fullName>
            </value>
            <value>
                <fullName>Air Partners Flight Support Services</fullName>
            </value>
            <value>
                <fullName>Airsprint Flight Support Services</fullName>
            </value>
            <value>
                <fullName>Annual Datalink Satellite Package</fullName>
            </value>
            <value>
                <fullName>Annual Fax Plan</fullName>
            </value>
            <value>
                <fullName>Apex XN Subscription</fullName>
            </value>
            <value>
                <fullName>APU Rental</fullName>
            </value>
            <value>
                <fullName>Atlas Air</fullName>
            </value>
            <value>
                <fullName>Availability Remedy</fullName>
            </value>
            <value>
                <fullName>Bailed / Consigned Assets</fullName>
            </value>
            <value>
                <fullName>Basic Eastern Package</fullName>
            </value>
            <value>
                <fullName>Basic Western Package</fullName>
            </value>
            <value>
                <fullName>Basic Worldwide Package</fullName>
            </value>
            <value>
                <fullName>Boeing Defense &amp; Space Group</fullName>
            </value>
            <value>
                <fullName>Clos de Berry Custom Plan</fullName>
            </value>
            <value>
                <fullName>Collins Datalink Graphical Weather</fullName>
            </value>
            <value>
                <fullName>Contract Price Load</fullName>
            </value>
            <value>
                <fullName>Core Return Remedy</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>End-of-Term Activities</fullName>
            </value>
            <value>
                <fullName>Entry to Production</fullName>
            </value>
            <value>
                <fullName>Epic Datalink Graphical Weather</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Field Arising LRUs</fullName>
            </value>
            <value>
                <fullName>Flight Sentinel Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>