src/objects/Entitlement__c/fields/Fleet_Asset_Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Asset_Aircraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Fleet Asset Aircraft allowing an entitlement to be associated with an aircraft.</description>
    <inlineHelpText>Lookup to the Fleet Asset Aircraft allowing an entitlement to be associated with an aircraft.</inlineHelpText>
    <label>Fleet Asset Aircraft</label>
    <referenceTo>Fleet_Asset_Detail__c</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>