src/objects/Entitlement__c/fields/Legacy_Entitlement_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Entitlement_Number__c</fullName>
    <label>Legacy Entitlement Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>