src/objects/Entitlement__c/fields/Number_Of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Seats__c</fullName>
    <label>Number Of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>