src/objects/Entitlement__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Platform with which this entitlement is associated.</description>
    <inlineHelpText>Platform with which this entitlement is associated.</inlineHelpText>
    <label>Platform</label>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>