src/objects/Entitlement__c/fields/Product_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Serial_Number__c</fullName>
    <description>BM 8/11/12 - created for MSP HAPP Project. This is the serial number of the product associated with this entitlement.</description>
    <inlineHelpText>This is the serial number of the product associated with this entitlement.</inlineHelpText>
    <label>Product Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>