src/objects/Entitlement__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>