src/objects/Entitlement__c/fields/SBL_S_DOC_AGREE_ROW_ID__c.field-meta.xml
<CustomField>
    <fullName>SBL_S_DOC_AGREE_ROW_ID__c</fullName>
    <label>SBL S DOC AGREE ROW ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>