src/objects/Entitlement__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>Contract_Number__r.SBU__c</formula>
    <label>SBU</label>
    <type>Text</type>
</CustomField>