src/objects/Entitlement__c/fields/Serv_Aircraft_Platform_and_Model__c.field-meta.xml
<CustomField>
    <fullName>Serv_Aircraft_Platform_and_Model__c</fullName>
    <label>Aircraft Platform and Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>