src/objects/Entitlement__c/fields/Serv_Aircraft_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serv_Aircraft_Serial_No__c</fullName>
    <label>Aircraft Serial No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>