src/objects/Entitlement__c/fields/Serv_Data_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Serv_Data_Supplier__c</fullName>
    <description>Added for Services team. This is also needed for Services SFDC Interfaces Project. This field holds the data supplier information from BMS application field DATA_SUPPLIER_NAME.</description>
    <inlineHelpText>This field holds the data supplier information from BMS application field DATA_SUPPLIER_NAME.</inlineHelpText>
    <label>Serv Data Supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>