src/objects/Entitlement__c/fields/Serv_Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Serv_Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EDT</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>