src/objects/Entitlement__c/fields/Serv_Engine_APU_Model_and_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serv_Engine_APU_Model_and_Serial_Number__c</fullName>
    <description>BM 7/25/13 - increased length to 255 for svcs interfaces project to prevent dupe creation. This is the engine or apu model and serial number.</description>
    <inlineHelpText>This is the engine or apu model and serial number.</inlineHelpText>
    <label>Engine/APU Model and Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>