src/objects/Entitlement__c/fields/Serv_Format__c.field-meta.xml
<CustomField>
    <fullName>Serv_Format__c</fullName>
    <description>Added for Services team. This is also needed for Services SFDC interfaces Project. This field holds data from BMS application, from field named FORMAT.</description>
    <inlineHelpText>This field holds data from BMS application, from field named FORMAT.</inlineHelpText>
    <label>Serv Format</label>
    <length>30</length>
    <type>Text</type>
</CustomField>