src/objects/Entitlement__c/fields/Serv_HON_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Serv_HON_Product_Name__c</fullName>
    <label>HON Product Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>