src/objects/Entitlement__c/fields/Serv_Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Serv_Media_Type__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRH-CD</fullName>
            </value>
            <value>
                <fullName>CD ROM</fullName>
            </value>
            <value>
                <fullName>Diskette</fullName>
            </value>
            <value>
                <fullName>Epic - CD</fullName>
            </value>
            <value>
                <fullName>HD Diskette</fullName>
            </value>
            <value>
                <fullName>LD Diskette</fullName>
            </value>
            <value>
                <fullName>Omni-Drive</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>PCMCIA Card</fullName>
            </value>
            <value>
                <fullName>USB Thumb Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>