src/objects/Entitlement__c/fields/Serv_Model_Number_and_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serv_Model_Number_and_Serial_Number__c</fullName>
    <description>BM 7/25/13 - increased length to 255 for svcs sfdc interfaces project. This is the model and serial number.</description>
    <inlineHelpText>This is the model and serial number.</inlineHelpText>
    <label>Model Number and Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>