src/objects/Entitlement__c/fields/Serv_Nav_Database_Descr__c.field-meta.xml
<CustomField>
    <fullName>Serv_Nav_Database_Descr__c</fullName>
    <description>added for Services team, and also for Services SFDC Interfaces project. This field data originates in BMS application in field NAV_DATABASE_DESCR</description>
    <inlineHelpText>This field data originates in BMS application in field NAV_DATABASE_DESCR.</inlineHelpText>
    <label>Serv Nav Database Descr</label>
    <length>200</length>
    <type>Text</type>
</CustomField>