src/objects/Entitlement__c/fields/Serv_NavDB_Ident__c.field-meta.xml
<CustomField>
    <fullName>Serv_NavDB_Ident__c</fullName>
    <label>NavDB Ident</label>
    <length>30</length>
    <type>Text</type>
</CustomField>