src/objects/Entitlement__c/fields/Serv_Price_Plan__c.field-meta.xml
<CustomField>
    <fullName>Serv_Price_Plan__c</fullName>
    <description>this field was added for the Services team. It also is needed for the Services SFDC Interfaces project. It holds data from BMS application from field named PRC_SCHED_DESC</description>
    <inlineHelpText>This field holds data from BMS application from field named PRC_SCHED_DESC.</inlineHelpText>
    <label>Serv Price Plan</label>
    <length>60</length>
    <type>Text</type>
</CustomField>