src/objects/Entitlement__c/fields/Serv_Prod_Descr__c.field-meta.xml
<CustomField>
    <fullName>Serv_Prod_Descr__c</fullName>
    <description>added for Services team. Also needed for Services SFDC Interfaces Project. This field holds data from BMS application, in field PROD_DESCR_TXT</description>
    <inlineHelpText>This field holds data from BMS application, in field PROD_DESCR_TXT</inlineHelpText>
    <label>Serv Prod Descr</label>
    <length>60</length>
    <type>Text</type>
</CustomField>