src/objects/Entitlement__c/fields/Serv_Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Serv_Subscription_Type__c</fullName>
    <description>Added for Services team. This is also needed for Services SFDC Interfaces project. This field holds data originating in the BMS application, in the DB_SUB_TYPE_NM field in BMS.</description>
    <inlineHelpText>This field holds data originating in the BMS application, in the DB_SUB_TYPE_NM field in BMS.</inlineHelpText>
    <label>Serv Subscription Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>