src/objects/Entitlement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Do Not Generate</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>FYI</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>NetJets</fullName>
            </value>
            <value>
                <fullName>Next Plan</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Ready-Accepted</fullName>
            </value>
            <value>
                <fullName>Ready-Pushed</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Special Annual</fullName>
            </value>
            <value>
                <fullName>-Status Not Found-</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Wait</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>