src/objects/Entitlement__c/fields/Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Usage_Count__c</fullName>
    <label>Usage Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>