src/objects/Entitlement__c/fields/Usage_Percent__c.field-meta.xml
<CustomField>
    <fullName>Usage_Percent__c</fullName>
    <label>Usage Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>