src/objects/Entitlement__c/fields/Usage_Value__c.field-meta.xml
<CustomField>
    <fullName>Usage_Value__c</fullName>
    <label>Usage Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>