src/objects/Entitlement__c/validationRules/Entitlement_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Entitlement_Start_Date</fullName>
    <active>false</active>
    <description>Entitlement Start Date Need to be greater than Contract Start Date</description>
    <errorConditionFormula>Contract_Number__r.StartDate  &gt;  Entitlement_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Entitlement_Start_Date__c</errorDisplayField>
    <errorMessage>Entitlement Start Date Need to be greater than Contract Start Date</errorMessage>
</ValidationRule>