src/objects/Entitlement__c/validationRules/Start_Date_Less_Than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Less_Than_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
not CONTAINS( $Profile.Name, &quot;API&quot; ),
Entitlement_Start_Date__c &gt; End_Date__c
				)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Entitlement end Date should be greater than Start Date</errorMessage>
</ValidationRule>