src/objects/Entitlement__c/validationRules/Usage_Cap_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Usage_Cap_Update</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Usage_Count__c) &amp;&amp; (Usage_Cap__c - Usage_Count__c != Number_Of_Seats__c)</errorConditionFormula>
    <errorMessage>Please enter Correct Usage Count Value</errorMessage>
</ValidationRule>