src/objects/Entitlement__c/validationRules/Usage_Count_Should_not_Exceed_Usage_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>Usage_Count_Should_not_Exceed_Usage_Cap</fullName>
    <active>true</active>
    <errorConditionFormula>Usage_Cap__c  &lt;  Usage_Count__c</errorConditionFormula>
    <errorMessage>Usage Count Should Not Exceed The usage Cap</errorMessage>
</ValidationRule>