src/objects/Entitlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entitlement_Type__c</columns>
    <columns>Entitlement_Name__c</columns>
    <columns>Fleet_Asset_Aircraft__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Site_Id__c</columns>
    <columns>Site_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Contract_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>