src/objects/Entitlement__c/listViews/Falcon.listView-meta.xml
<ListView>
    <fullName>Falcon</fullName>
    <columns>NAME</columns>
    <columns>Entitlement_Type__c</columns>
    <columns>Entitlement_Name__c</columns>
    <columns>Fleet_Asset_Aircraft__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Site_Id__c</columns>
    <columns>Site_Status__c</columns>
    <columns>Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fleet_Asset_Aircraft__c</field>
        <operation>contains</operation>
        <value>Falcon</value>
    </filters>
    <filters>
        <field>Fleet_Asset_Aircraft__c</field>
        <operation>contains</operation>
        <value>&quot; 10 &quot;</value>
    </filters>
    <label>Falcon</label>
    <language>en_US</language>
</ListView>