src/objects/Entitlement__c/listViews/Missing.listView-meta.xml
<ListView>
    <fullName>Missing</fullName>
    <columns>NAME</columns>
    <columns>Entitlement_Type__c</columns>
    <columns>Entitlement_Name__c</columns>
    <columns>Fleet_Asset_Aircraft__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Site_Id__c</columns>
    <columns>Site_Status__c</columns>
    <columns>Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Number__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Site_Name__c</field>
        <operation>equals</operation>
        <value>SAP_CNT</value>
    </filters>
    <label>Missing</label>
    <language>en_US</language>
</ListView>