src/objects/Entitlement__c/listViews/Services.listView-meta.xml
<ListView>
    <fullName>Services</fullName>
    <columns>NAME</columns>
    <columns>Entitlement_Type__c</columns>
    <columns>Entitlement_Name__c</columns>
    <columns>Fleet_Asset_Aircraft__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Site_Id__c</columns>
    <columns>Site_Status__c</columns>
    <columns>Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Service</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
    </filters>
    <label>Services</label>
    <language>en_US</language>
</ListView>